--- a/css/styles.css
+++ b/css/styles.css
@@ -21,24 +21,24 @@
     display: flex;
   }
   
-  .chart-container {
-    width: 80%;
+.chart-container {
+    width: 90%;
     display: flex;
     flex-direction: column; 
     align-items: center;
     justify-content: center; 
     background-color:white ;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-    border-radius: 5px;
-    margin: 20px;
+    padding: 0px;
+    border-radius: 0px;
+    margin: 10px;
     
 }
 
 .chart-title-box {
     background-color: #7AAD7B;
-    padding: 10px;
-    margin-top: 10px;
+    padding: 5px;
+    margin-top: 5px;
     width: 100%;
     text-align: center; /* Center text within the chart title box */
 }
@@ -62,11 +62,22 @@ h2 {
     font-size: 35px;
     font-weight: 500; 
 }
-.body{
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
+h3 {
+    width: 90%;
+}
+h4 {
+    color: black;
+    font-family: 'Helvetica';
+    font-size: 28px;
+    font-weight: 400;
+}
+
+.body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
     background-color: white;
-    border-radius: 5px;
-    width: 80%;
-    text-align: left;
+    border-radius: 10px;
+    width: 90%;
+    text-align:justify;
+    line-height: 1.5;
 }
